@@ -1,3 +1,6 @@
+2010-03-19 Magnus Hagdorn
+ * scripts/generate_ncvars.py: fix bug with scaling factors
+
 2010-02-26 Magnus Hagdorn
  * libglimmer/ncdf_template.F90.in: load modules containing scales, declare
    variable for scales
